# MLX-AI-3D-Pipeline

./: .gitignore  AI_WORKSPACE_ARCHITECTURE.md  FINAL_SUMMARY.md  INSTALL.md  INSTALLATION_GUIDE.md  LOCAL_SETUP.md  MLX_HOME_LAB_BEST_PRACTICES.md  MODULAR_REDESIGN.md  QUICKSTART.md  QUICK_START_HOME_LAB.md  README.md  README_PIPELINE.md  ai_3d_pipeline.sh  basic_test.py  blender_mlx_bridge.py  debug_server.py  git_setup.sh  hybrid_config.yaml  install.sh  install_requirements.txt  local_install.sh  minimal_test.py  mlx3d_demo.py  pyproject.toml  setup_home_lab_models.sh  setup_mlx3d.py  simple_install.sh  simple_sd_test.py  system-optimization-report.md  tailscale_server.py  test_installation.py  test_mcp_setup.md
ai_workspace/: __init__.py  cli.py  config.py
ai_workspace/core/: __init__.py  chat.py  editor.py  generation3d.py  imaging.py
depth_forge/: README.md
sdxl_studio/: README.md  __init__.py  app.py  cli.py  setup.py
